[package]
name = "sync_svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3.29"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
prost-build = { version = "0.12" }